Commando: Commando now has a dark UI as part of an experimental redesign
Discuss here - http://forum.komodoide.com/t/designing-komodo-9-share-
your-opinion/678

(integrated from trunk branch change 0b9b55f by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/editor.less
@@ -4,6 +4,9 @@
 @editor-popup-foreground:           #BABABA;
 @editor-popup-selection-background: rgba(0,0,0,0.5);
 @editor-popup-selection-foreground: #FFF;
+@editor-popup-border:               1px solid rgba(255,255,255,0.2);
+@editor-popup-border-radius:        2px;
+@editor-popup-shadow:               inset 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
 
 @editor-popup-lightbg-background:           rgba(220,220,220,0.9);
 @editor-popup-lightbg-foreground:           #595959;
