Commando: Added loading animation
(integrated from master branch change 633e396 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/editor.less
@@ -7,11 +7,7 @@
 @hud-border:               1px solid rgba(255,255,255,0.2);
 @hud-border-radius:        2px;
 @hud-shadow:               inset 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
-
-@hud-lightbg-background:           rgba(220,220,220,0.9);
-@hud-lightbg-foreground:           #595959;
-@hud-lightbg-selection-background: rgba(255,255,255,0.5);
-@hud-lightbg-selection-foreground: #000;
+@hud-loader-color:         rgba(255, 255, 255, 0.3);
 
 @hud-item-even-background:          rgba(0,0,0,0.1);
 
