Notifications: The notification system has been overhauled
Notifications are now shown in-line and over the editor, you will be
able to perform actions on them (undo, activate, dont show again, etc).
They are intended to be more informative and less obnoxious.
rn=

(integrated from master branch change 2d4d0c1 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -381,7 +381,7 @@
 /* Pref Icons */
 
 @icon-pref-uiSettings:          url("@{icon-url-prefix}eye.png");
-@icon-pref-codeIntel:           url("@{icon-url-prefix}info2.png");
+@icon-pref-codeIntel:           url("@{icon-url-prefix}info.png");
 @icon-pref-fonts:               url("@{icon-url-prefix}palette.png");
 @icon-pref-debugger:            url("@{icon-url-prefix}play4.png");
 @icon-pref-editor:              url("@{icon-url-prefix}code.png");
@@ -409,3 +409,4 @@
 @icon-pref-places:              url("@{icon-url-prefix}folder.png");
 @icon-pref-httpinspect:         url("@{icon-url-prefix}direction.png");
 @icon-pref-formatters:          url("@{icon-url-prefix}clear-formatting.png");
+@icon-pref-notify:              url("@{icon-url-prefix}notification2.png");
