--- a/src/chrome/komodo/skin/prefs/pref-window.less
+++ b/src/chrome/komodo/skin/prefs/pref-window.less
@@ -173,4 +173,9 @@
         background-image: @icon-pref-formatters;
     }
 
+    treechildren::-moz-tree-cell(notifyItem)
+    {
+        background-image: @icon-pref-notify;
+    }
+
 }
