--- a/src/chrome/komodo/skin/plat/shared/_config/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/editor.less
@@ -1,12 +1,13 @@
 /* General */
 
-@hud-background:           rgba(30,30,30,0.9);
-@hud-foreground:           #BABABA;
+@hud-background:           rgba(34, 34, 34, 0.9);
+@hud-background-image:     linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+@hud-foreground:           #EEE;
 @hud-selection-background: rgba(0,0,0,0.5);
 @hud-selection-foreground: #FFF;
 @hud-border:               1px solid rgba(255,255,255,0.2);
 @hud-border-radius:        2px;
-@hud-shadow:               inset 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+@hud-shadow:               none;
 @hud-loader-color:         rgba(255, 255, 255, 0.3);
 
 @hud-item-even-background:          rgba(0,0,0,0.1);
