--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -7,6 +7,7 @@
 {
     -moz-appearance: none;
     background: @hud-background;
+    background-image: @hud-background-image;
     color: @hud-foreground;
     border: @hud-border;
     border-radius: @hud-border-radius;
