UI: Color findbar according to HUD
(integrated from master branch change d8ecf23 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/editor.less
@@ -82,6 +82,13 @@
     }
 }
 
+/* Findbar */
+
+ko-findbar.hud
+{
+    border-width: 1px 0 0 0 !important;
+}
+
 /* Autocompletions */
 
 scintilla[anonid="scintilla"] > panel[anonid="autocompletepopup"]
