UI: The preferences window has been cleaned up
It is now much more pleasing to the eye as well as easier to navigate
for new users. A "show advanced" toggle allows you to access advanced
preferences that most people would not want to even look at
rn=

(integrated from master branch change 5f36078 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -377,3 +377,35 @@
 @icon-breadcrumb-folder:        @icon-native-folder;
 @icon-breadcrumb-file:          disabled;
 @icon-breadcrumb-arrow:         url("@{icon-url-prefix}arrow-right3.png");
+
+/* Pref Icons */
+
+@icon-pref-uiSettings:          url("@{icon-url-prefix}eye.png");
+@icon-pref-codeIntel:           url("@{icon-url-prefix}info2.png");
+@icon-pref-fonts:               url("@{icon-url-prefix}palette.png");
+@icon-pref-debugger:            url("@{icon-url-prefix}play4.png");
+@icon-pref-editor:              url("@{icon-url-prefix}code.png");
+@icon-pref-environ:             url("@{icon-url-prefix}cog2.png");
+@icon-pref-associations:        url("@{icon-url-prefix}files.png");
+@icon-pref-find:                url("@{icon-url-prefix}binoculars.png");
+@icon-pref-ishell:              url("@{icon-url-prefix}console.png");
+@icon-pref-international:       url("@{icon-url-prefix}radio.png");
+@icon-pref-editKeys:            url("@{icon-url-prefix}keyboard2.png");
+@icon-pref-help:                url("@{icon-url-prefix}question4.png");
+@icon-pref-languages:           url("@{icon-url-prefix}globe2.png");
+@icon-pref-mappedURIs:          url("@{icon-url-prefix}link4.png");
+@icon-pref-newFiles:            url("@{icon-url-prefix}file-plus.png");
+@icon-pref-editSave:            url("@{icon-url-prefix}ko_save.png");
+@icon-pref-print:               url("@{icon-url-prefix}print2.png");
+@icon-pref-servers:             url("@{icon-url-prefix}database.png");
+@icon-pref-sharedSupport:       url("@{icon-url-prefix}cabinet.png");
+@icon-pref-sourceCodeControl:   url("@{icon-url-prefix}ko_scc_add.png");
+@icon-pref-syntaxChecking:      url("@{icon-url-prefix}checkmark-circle2.png");
+@icon-pref-testPlan:            url("@{icon-url-prefix}list.png");
+@icon-pref-web:                 url("@{icon-url-prefix}earth.png");
+@icon-pref-projects:            url("@{icon-url-prefix}briefcase.png");
+@icon-pref-windowsIntegration:  url("@{icon-url-prefix}windows8.png");
+@icon-pref-commando:            url("@{icon-url-prefix}command.png");
+@icon-pref-places:              url("@{icon-url-prefix}folder.png");
+@icon-pref-httpinspect:         url("@{icon-url-prefix}direction.png");
+@icon-pref-formatters:          url("@{icon-url-prefix}clear-formatting.png");
