--- a/src/chrome/komodo/skin/plat/shared/_config/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/editor.less
@@ -1,16 +1,16 @@
 /* General */
 
+/* Much of this gets overwritten with scheme specific colors, see skin/partials/shceme-skinning.less */
+
 @hud-background:           rgba(34, 34, 34, 0.9);
 @hud-background-image:     linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
 @hud-foreground:           #EEE;
-@hud-selection-background: rgba(0,0,0,0.5);
+@hud-selection-background: rgba(0,0,0,0.2);
 @hud-selection-foreground: #FFF;
 @hud-border:               1px solid rgba(255,255,255,0.2);
 @hud-border-radius:        2px;
 @hud-shadow:               none;
 @hud-loader-color:         rgba(255, 255, 255, 0.3);
-
-@hud-item-even-background:          rgba(0,0,0,0.1);
 
 @hud-item-border:                   1px solid rgba(255,255,255,0);
 @hud-selected-border:               1px solid rgba(255,255,255,0);
