Quicklaunch: Allow quick file opening/creation when there are no open buffers
rn=

(integrated from master branch change 9793af9 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -135,6 +135,7 @@
 @icon-radio-selected:           disabled;
 @icon-checkbox-small:           url("@{icon-url-prefix}checkmark2.png");
 @icon-checkbox-small-checked:   url("@{icon-url-prefix}checkmark.png");
+@icon-customize-panes:          url("@{icon-url-prefix}grid3.png");
 
 /* Menu Specific Icons */
 @icon-menu-help:                url("@{icon-url-prefix}question2.png");
