--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -359,3 +359,24 @@ toolbar#nav-bar
     border: 0;
 }
 
+/* Quick Launch */
+
+#quicklaunch
+{
+    button
+    {
+        padding: 6px 4px;
+        width: 250px;
+
+        image
+        {
+            display: block;
+            margin-right: 6px;
+        }
+
+        label
+        {
+            text-align: left;
+        }
+    }
+}
