--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -112,6 +112,14 @@ separator.groove
 
 /* Buttons */
 
+button.show-icon
+{
+    .button-icon
+    {
+        display: block !important;
+    }
+}
+
 button:not(.button-toolbar-a):not(.button-toolbar-b):not(.button-toolbar-c):not(.button-toolbar-d):not(.button-link):not(.button-plain):not([type="menu"]),
 :not(toolbarbutton):not(toolbaritem) > toolbarbutton
 {
