Startpage: The startpage has been retired
It is succeeded by existing built-in functionality as well as the
"getting started" dialog and the new "Quick Launch" page (seen when all
buffers are closed)
rn=

(integrated from master branch change 1752d2d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/abyss_skin/skin/window.less
+++ b/src/modules/abyss_skin/skin/window.less
@@ -6,7 +6,7 @@ splitter.multiview_splitter
     min-height: 3px;
 }
 
-#topview tabpanel view:not([type="startpage"])
+#topview tabpanel view
 {
     margin-left: 0;
     margin-right: 0;
