Commando: Added favourites, history, simplified coding pattern
(integrated from master branch change 6821dfc by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -930,6 +930,16 @@ statusbar .menu-icon
     list-style-image: @icon-close;
 }
 
+.favourite-icon
+{
+    list-style-image: @icon-favourite;
+}
+
+box.favourite-icon
+{
+    background-image: @icon-favourite;
+}
+
 /* Bug #100021 */
 #statusbar-message-wrap button.close-button
 {
