--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -34,6 +34,11 @@
         background: fade(@border, 50%) !important;
     }
 
+    .docked
+    {
+        background: fade(@border, 50%) !important;
+    }
+
     scrollbar
     {
         slider
