--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -135,6 +135,7 @@
 @icon-checkbox-small:           url("@{icon-url-prefix}checkmark2.png");
 @icon-checkbox-small-checked:   url("@{icon-url-prefix}checkmark.png");
 @icon-customize-panes:          url("@{icon-url-prefix}grid3.png");
+@icon-favourite:                url("chrome://famfamfamsilk/skin/icons/star.png");
 
 /* Menu Specific Icons */
 @icon-menu-help:                url("@{icon-url-prefix}question2.png");
