--- a/src/chrome/komodo/skin/plat/shared/_config/editor.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/editor.less
@@ -11,6 +11,8 @@
 @hud-border-radius:        2px;
 @hud-shadow:               none;
 @hud-loader-color:         rgba(255, 255, 255, 0.3);
+@hud-dock-color:           rgba(255,255,255,0.3);
+@hud-special-color:        rgba(255,255,255,0.4);
 
 @hud-item-border:                   1px solid rgba(255,255,255,0);
 @hud-selected-border:               1px solid rgba(255,255,255,0);
