--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -4,8 +4,8 @@
     @background-contrast:   darken(@background, 10%);
     @border:                lighten(@background, 5%);
     @background-odd:        fade(darken(@background-contrast, 3%), 80%);
-    @background-selected:   darken(@background-contrast, 5%);
     @background-input:      lighten(@background-contrast, 10%);
+    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
 }
 
 .setVars() when (@dark = 0)
@@ -14,8 +14,8 @@
     @background-contrast:   darken(@background, 5%);
     @border:                darken(@background, 10%);
     @background-odd:        fade(darken(@background-contrast, 1%), 80%);
-    @background-selected:   darken(@background-contrast, 10%);
     @background-input:      darken(@background-contrast, 10%);
+    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
 }
 
 .setVars();
@@ -26,6 +26,7 @@
 
 .hud
 {
+    background-image: @background-image !important;
     background-color: fade(@background-contrast, 90%) !important;
     color: @foreground !important;
     border-color: @border !important;
@@ -81,8 +82,8 @@
 
         &[selected="true"]
         {
-            color: @foreground-focus !important;
-            background: @background-selected !important;
+            color: @special-fore !important;
+            background: desaturate(@special, 20%) !important;
         }
 
         &[focused]:not([selected="true"])
