--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -6,6 +6,7 @@
     @background-odd:        fade(darken(@background-contrast, 3%), 80%);
     @background-input:      lighten(@background-contrast, 10%);
     @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+    @background-selected:   fade(desaturate(@special, 20%), 30%);
 }
 
 .setVars() when (@dark = 0)
@@ -16,10 +17,12 @@
     @background-odd:        fade(darken(@background-contrast, 1%), 80%);
     @background-input:      darken(@background-contrast, 10%);
     @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+    @background-selected:   desaturate(@special, 20%);
 }
 
 .setVars();
 
+@foreground-selected:   contrast(@background-selected);
 @special-fore: contrast(@special);
 
 /* Hud */
@@ -82,8 +85,8 @@
 
         &[selected="true"]
         {
-            color: @special-fore !important;
-            background: desaturate(@special, 20%) !important;
+            color: @foreground-selected !important;
+            background: @background-selected !important;
         }
 
         &[focused]:not([selected="true"])
